src/test/scala/wacc/wacc_examples/invalid/semanticErr/function/tail_recursive_functions/OverloadingTailRecursion.wacc
begin
    @tailrec
    int sumToFive(int x) is
        if x == 5
        then return x
        else
            int y = call sumToFive(x + 1) ;
            return y 
        fi
    end

    int sumToFive(int x) is
        return x + 5
    end

    int z = call sumToFive(4);
    exit z
end